--- a/SpecFlowTestyNaReseni/SpecFlowTestyNaReseni.csproj
+++ b/SpecFlowTestyNaReseni/SpecFlowTestyNaReseni.csproj
@@ -10,6 +10,7 @@
     <PackageReference Include="NUnit3TestAdapter" Version="4.0.0" />
     <PackageReference Include="SpecFlow" Version="3.9.8" />
     <PackageReference Include="SpecFlow.NUnit" Version="3.9.8" />
+    <PackageReference Include="SpecFlow.Plus.LivingDocPlugin" Version="3.9.5" />
     <PackageReference Include="SpecFlow.Tools.MsBuild.Generation" Version="3.9.8" />
   </ItemGroup>
 
